Did some fixes, but forget what exaclty

--- a/src/api/data/test.ipynb
+++ b/src/api/data/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,16 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -63,13 +54,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "values = {'n_neighbors': '1234', 'weights': '123', 'algorithm': '1234', 'leaf_size': '124'}\n",
-    "values = {key: int(value) for key, value in values.items()}\n",
-    "\n",
     "model = KNeighborsClassifier()\n",
     "model.fit(X_train, y_train)\n",
     "y_pred = model.predict(X_test)"
@@ -77,23 +65,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "float"
+       "0.8589"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "accruacy = accuracy_score(y_test, y_pred)\n",
-    "type(accruacy)"
+    "accruacy"
    ]
   }
  ],
